# tallyui

./: Cargo.toml  Makefile  README.md  index.html  styles.css
.github/workflows/: build-and-publish-dist.yml  publish-dist.yml  publish.yml
src/: components.rs  data.rs  main.rs
src/components/: tally_table.rs  tally_table_row.rs
src/data/: table_repo.rs
src/model/: table.rs
