[package]
name = "tallyui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
gloo-console = "0.2.3"
gloo-storage = "0.2.2"
serde = "1.0.159"
yew = { version = "0.20.0", features = ["csr"] }
web-sys = { version = "0.3.61", features = ["Event","EventTarget","InputEvent"] }
wasm-bindgen = "0.2.84"
